# Purplle-Store-Intelligence-System

./: .env.example  .gitignore  CHOICES.md  DESIGN.md  Dockerfile.api  Dockerfile.pipeline  ENHANCEMENTS_SUMMARY.md  FRONTEND_FIX_REPORT.md  Makefile  QUICK_REFERENCE.md  README.md  SUBMISSION.md  SUBMISSION_IMPROVEMENTS.md  SYSTEM_STATUS_REPORT.md  TESTING_GUIDE.md  VERIFICATION_CHECKLIST.md  assertions.py  docker-compose.yml  fix_both.py  fix_fixtures_test.py  fix_group.py  fix_models.py  fix_test_422.py  fix_test_pipeline.py  fix_tests.py  log.txt  mypy_output.txt  pyproject.toml  requirements.api.txt  requirements.pipeline.txt  requirements.txt  sample_events.jsonl  store_layout.json  test_post.py
app/: anomalies.py  database.py  funnel.py  health.py  heatmap.py  ingestion.py  main.py  metrics.py  metrics_prom.py  models.py  pos.py  websocket.py  worker.py
app/core/: settings.py  tracing.py
dashboard/: app.py  live_html_dashboard.html
data/: events_cctv_final.jsonl  events_cctv_real.jsonl  events_synthetic_backup.jsonl
docs/: CHOICES.md  DESIGN.md  DOCKER_VERIFY.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/context/: StoreContext.tsx
frontend/src/hooks/: useLiveEvents.ts
frontend/src/lib/: api.ts  (+1 more)
pipeline/: detect.py  emit.py  replay.py  run.sh  sessions.py  staff_classifier.py  synthetic_events.py  tracker.py  validate_schema.py  zone_mapper.py
scripts/: demo.sh  ingest_jsonl.sh  local-api.sh  setup_data.sh
tests/: conftest.py  test_addendum.py  test_anomalies.py  test_api_schema_validation.py  test_emit.py  test_fixtures_validation.py  test_funnel.py  test_group_entry_detection.py  test_heatmap.py  test_metrics.py  test_pipeline.py  test_pos.py  test_sessions.py  test_tracker.py  test_websocket.py
tests/fixtures/: all_staff.jsonl  camera_overlap.jsonl  empty_store.jsonl  group_entry.jsonl  partial_occlusion.jsonl  pos_correlation.csv  pos_sample.csv  queue_buildup.jsonl  reentry.jsonl  staff_movement.jsonl
(+29 files in other folders)
